# OpenDXA

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
.github/workflows/: publish-plugin-binary.yml  publish-plugin-oci.yml
include/opendxa/analysis/: burgers_circuit.h  burgers_loop_builder.h
include/opendxa/geometry/: half_edge_mesh.h
include/opendxa/structures/: cluster.h  dislocation_network.h
include/volt/analysis/: burgers_circuit.h  burgers_loop_builder.h  crystal_path_finder.h  delaunay_tessellation_spatial_query.h  elastic_mapping.h  triangle_tetrahedron_intersection_test.h
include/volt/core/: dislocation_analysis.h
include/volt/geometry/: interface_mesh.h  manifold_construction_helper.h
include/volt/helpers/: burgers_circuit.h  cluster_vector.h  crystal_path_finder.h  dislocation_network.h  dxa_serialization.h  half_edge_mesh.h  manifold_construction_helper.h
include/volt/pipeline/: burgers_loop_builder.h  delaunay_tessellation.h  dislocation_analysis.h  elastic_mapping.h  interface_mesh.h
include/volt/structures/: cluster.h  dislocation_network.h
include/volt/utilities/: json_exporter.h  msgpack_writer.h
lattices/: bcc.yml  bct.yml  cubic_diamond.yml  fcc.yml  fct.yml  hcp.yml  hex_diamond.yml  sc.yml  st.yml
src/: main.cpp
src/analysis/: burgers_loop_builder.cpp  crystal_path_finder.cpp  delaunay_tessellation_spatial_query.cpp  elastic_mapping.cpp
src/core/: dislocation_analysis.cpp
src/functions/: opendxa.cpp
src/geometry/: delaunay_tessellation.cpp  interface_mesh.cpp
src/helpers/: crystal_path_finder.cpp  dislocation_network.cpp  dxa_serialization.cpp
src/pipeline/: burgers_loop_builder.cpp  delaunay_tessellation.cpp  dislocation_analysis.cpp  elastic_mapping.cpp  interface_mesh.cpp
src/structures/: dislocation_network.cpp
src/utilities/: json_exporter.cpp  msgpack_writer.cpp
tools/: generate_tetragonal_lattices_from_atomsk.py
